<resources>
    <string name="app_name">Rick And Morty</string>
    <string name="prefs_file">com.rickandmorty.rickandmorty.PREFERENCE_FILE_KEY</string>

    <string name="characters">Personajes</string>
    <string name="locations">Ubicaciones</string>
    <string name="location">Ubicación</string>
    <string name="episodes">Episodios</string>
    <string name="profile">Perfil</string>

    <string name="status">Estado: %s</string>
    <string name="species">Especie: %s</string>
    <string name="type">Tipo: %s</string>
    <string name="gender">Género: %s</string>
    <string name="origin">Origen: %s</string>
    <string name="location_name">Ubicación: %s</string>
    <string name="residents">Residentes: %s</string>
    <string name="created">Creación: %s</string>
    <string name="air_date">Fecha de emisión: %s</string>
    <string name="characters_amount">Personajes: %s</string>
    <string name="episode_name">%s (%s)</string>
    <string name="name">Nombre: %s</string>
    <string name="dimension">Dimensión: %s</string>

    <string name="google">Google</string>
    <string name="welcome">Bienvenido a</string>
    <string name="login_text">Para acceder es obligatorio iniciar sesión</string>
    <string name="error_massage">"Houston, tenemos un problema!"</string>
    <string name="sign_out">"Cerrar sesión</string>
</resources>
