<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.locationinformation.LocationInformationActivity">

    <TextView
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/location_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_name"
        tools:text="@string/type" />

    <TextView
        android:id="@+id/location_dimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_type"
        tools:text="@string/dimension" />

    <TextView
        android:id="@+id/location_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_dimension"
        tools:text="@string/created" />

    <TextView
        android:id="@+id/location_residents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_created"
        tools:text="@string/residents" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_residents" />

</androidx.constraintlayout.widget.ConstraintLayout>
